--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name = "label_time_workout">Time (mins)</string>
     <string name = "label_tip">Tip ($):</string>
     <string name = "label_total">Total:</string>
-    <string name = "amount_weight_hint">Enter weight</string>
+    <string name = "amount_weight_hint">Enter dollar</string>
     <string name = "amount_tip_percent_hint">Enter tip</string>
-    <string name = "button_calculate">Calculate</string>
+    <string name = "button_calculate">Convert</string>
 
 </resources>
